--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,9 +1,7 @@
-@import "https://fonts.googleapis.com/css?family=Merriweather";
-@import "https://fonts.googleapis.com/css?family=Roboto";
-@import "https://fonts.googleapis.com/css?family=Goudy+Bookletter+1911";
+@import "https://fonts.googleapis.com/css?family=Lato";
 
 body {
-	font-family: 'Roboto', serif;
+	font-family: 'Lato', sans-serif;
     background: linear-gradient(to bottom, #ffffff 27%, #000000 113%);
     overflow-x: hidden;
 }
@@ -13,12 +11,12 @@ p, h1, h2, h3, h4, h5, h6 {
 }
 
 p {
-	font-family: 'Roboto', serif;
+	font-family: 'Lato', sans-serif;
     letter-spacing: 0.5px;
 }
 
 .navbar-brand {
-	font-family: 'Lobster', sans-serif;
+	font-family: 'Lobster', serif;
 	color: #fff !important;
 	font-size: 30px;
 	text-shadow: 2px 2px tomato;
